Fix Railway startup: add startup script to handle DATABASE_URL and migrations

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,5 +8,5 @@ cmds = ["npm ci"]
 cmds = ["npm install && npx prisma generate"]
 
 [start]
-cmd = "npx prisma migrate deploy && npm run start"
+cmd = "./start.sh"
 
