--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "api": "ts-node-dev src/api/server.ts",
     "start": "node -r ts-node/register src/api/server.ts",
+    "start:with-migrations": "npx prisma migrate deploy && npm run start",
     "scrape": "node -r ts-node/register src/scrapers/cim-full-v2-cron.ts",
     "build": "tsc",
     "prisma:generate": "prisma generate",
