--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,8 +2,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://YOUR_RAILWAY_API_URL/:path*"
+      "destination": "https://rental-scraper-production.up.railway.app/:path*"
     }
   ]
 }
-
