--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate deploy",
     "prisma:reset": "prisma migrate reset --force",
-    "prisma:status": "prisma migrate status"
+    "prisma:status": "prisma migrate status",
+    "seed:websites": "node -r ts-node/register src/maintenance/seed-source-websites.ts"
   },
   "keywords": [],
   "author": "",
