--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -4,5 +4,16 @@
       "source": "/api/:path*",
       "destination": "https://rental-scraper-production.up.railway.app/:path*"
     }
+  ],
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        }
+      ]
+    }
   ]
 }
