Improve deduplication logic and add duplicate finder script
- Allow cross-website fingerprint matching with verification
- Handle price=0 listings in matching logic
- Add fallback matching by building + area + rooms
- Update Telegram notifications: price > 0 AND <= 12000 EUR, score >= 50
- Add find-duplicates script for debugging

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "prisma:migrate": "prisma migrate deploy",
     "prisma:reset": "prisma migrate reset --force",
     "prisma:status": "prisma migrate status",
-    "seed:websites": "node -r ts-node/register src/maintenance/seed-source-websites.ts"
+    "seed:websites": "node -r ts-node/register src/maintenance/seed-source-websites.ts",
+    "find-duplicates": "node -r ts-node/register src/maintenance/find-duplicates.ts"
   },
   "keywords": [],
   "author": "",
